# agreemod_v2

./: .dockerignore  .env.example  .env2  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  Untitled Diagram.drawio  alembic.ini  docker-compose.yml  docker-compose_dev.yml  docker-compose_local_db.yml  env.example  get_badges.py  main.py  pyproject.toml  requirements.txt  response.json
.github/workflows/: deploy.yml
agreemod_v2/: main.py
alembic/: env.py  pyproject.toml
alembic/versions/: 2024_02_25_1614_init.py  2024_03_07_1747-0bfcc405c30e_init.py  2024_03_07_1750-606a14968f4e_populate_dicts.py  2024_03_13_2202-6ed374791d11_add_participation.py  2024_03_23_2233-2024_03_23_2233_comment.py  2024_03_26_1847-2024_03_26_1847_comment.py  2024_03_29_1829-2024_03_29_1829_add_primary_key_to_badge_directions.py  2024_03_30_2140-2024_03_30_2140_badge_add_m2m_connection_direction.py  2024_04_03_1549-2024_04_03_1549_add_new_column_in_participation.py  2024_04_03_1604-2024_04_03_1604_add_new_column_in_arival_and_badge.py  2024_04_05_2214-2024_04_05_2214_add_m2m_badge_connection_direction.py  2024_04_06_1925-2024_04_06_1925_add_m2m_badge_connection_direction.py  2024_05_01_2303-7e352943de77_autoincrement_to_participationorm.py  2024_05_10_1825-009801ac8083_create_audit_log_table.py  2024_05_18_2213-c8394141071c_merge_heads.py  2024_05_21_1937-cb45113c1ad4_init.py  2024_05_21_1938-5e144e40c20d_populate_dicts.py  2024_05_22_1825-009801ac8083_create_audit_log_table.py  2024_05_29_1837-4d2ee9a59766_add_coda_index.py  2024_05_29_2326-bdd9c6f1f320_fix_foreign_keys.py  2024_05_30_0006-ef9c8d0cde2c_populate_status.py  2024_05_30_1612-914cf367f5c0_add_occupation_to_badge.py  2024_05_30_1747-3266bc37a54d_fix_badge_foreign_key.py  2024_05_30_2057-da891e1e7ce0_fix_foreign_key_in_badge_directions.py  2024_05_31_1734-118d7eb37b10_update_participation_role.py  2024_05_31_1742-b97198c275b0_populate_participation_role.py  2024_05_31_2123-3edeccb80eb1_drop_participation_code.py  2024_06_01_1319-9874654430d5_fix_infant_foreign_key.py  2024_06_03_1837-bf93aaff0bfa_drop_participation_type.py  2024_06_11_1756-081e327b9a8a_add_status_to_arrival_all_anonymous_.py  2024_06_11_1844-5661c2563d6a_change_int_id_to_notion_id_in_anons.py  2024_06_11_1847-20c2bd0882d4_add_last_updated_to_anons.py  2024_06_13_1831-3c0771f4924c_badge_batch_and_number_now_nullable.py  2024_06_13_1859-6aa4fb4cc8bc_logs_row_id_now_nullable.py  2024_06_13_2246-2fcf79b2b6fa_coda_index_is_nullable.py  2024_06_19_1340-ad56af5441ab_cleanup_cyrillics.py  2024_06_21_1017-2d6cfef184fd_add_cascade_deletion.py  2024_06_23_1449-e15e5fc0a581_change_coda_index.py  2024_06_23_1512-3da67c387d5d_change_coda_index_arrival.py  2024_06_23_2027-5ed19b1a2be2_change_time_arrival_type.py  (+19 more)
app/: config.py  documenters.py  errors.py  init_db.py  main.py  notion_db_prod.yml  pyproject.toml
app/coda/: writer.py
app/db/: dictionaries_orm.py  meta.py  orm.py
app/dependencies/: db.py  service.py
app/dictionaries/: badge_color.py  badge_diet_type.py  badge_feed_type.py  badges_diet_type.py  badges_feed_type.py  diet_type.py  direction_type.py  feed_type.py  participation_role.py  participation_status.py  participation_type.py  transport_type.py
app/dto/: badge.py  direction.py
bot/: .env.template  Dockerfile  Makefile  README.md  main.py  main_bot.py  pyproject.toml  rabbit.py  updater.py  updater_states.py
bot/src/: config.py
bot/src/handlers/: direction.py  person.py  start.py
bot/src/utils/: decorators.py
common/: logging_setup.py
database/: config.py  create_db.py  meta.py
db/: config.py  create_db.py  meta.py
dictionaries/: __init__.py  badge_color.py  dictionaries.py  diet_type.py  direction_type.py  feed_type.py  gender.py  participation_role.py  participation_status.py  participation_type.py  transport_type.py
docker/: alembic.dockerfile  api.dockerfile  deleter.dockerfile  participations_creator.dockerfile  restorer.dockerfile  telegram_bot.dockerfile  updater.dockerfile
event_manager/: event_manager.py  rmq_worker.py
grist_updater/: README.md  config.py  fetch_directions.py  fetch_participations.py  fetch_persons.py  grist_updater.py  participation_roles.py  pyproject.toml  requirements.txt  run_updater.py  sync_state.json  test_config.py
jupyter/: badges_restore.ipynb
myenv/: pyvenv.cfg
rabbit/: consumer.py  create_participations_consumer.py  delete_consumer.py  example.py  grist_to_postgres.py  interface.py  publisher.py  pyproject.toml  rabbit_example_main.py  restore_consumer.py
scripts/: build_and_run.sh
updater/: config.ini  config.py  main.py  main_updater.py  notion_db_dev.yml  notion_dbs_info.json  pyproject.toml
updater/notion/: client.py  databases.py  models.py  poll_database.py
updater/notion/models/: base.py  direction.py  person.py  response.py
updater/notion/models/primitives/: base.py  checkbox.py  date.py  email.py  files.py  multiselect.py  number.py  phone_number.py  relation.py  rich_text.py  select.py  title.py
updater/scripts/: poll_notion_directions.py  poll_notion_persons.py  restore_csv_to_notion.py  restore_csv_to_notion_v2.py  restore_csv_to_notion_v3.py
updater/src/: config.py  states.py  updater.py  utils.py
updater/src/coda/: client.py
updater/src/coda/models/: arrival.py  participation.py
updater/src/db/orm/: dictionaries_orm.py  participation.py
updater/src/db/repos/: base.py  participation.py
updater/src/notion/: __init__.py  client.py  databases.py  poll_database.py  write_database.py  write_database_badges.py  write_database_directions.py
updater/src/notion/dumper/: dump_badges.py
updater/src/notion/models/: badge.py  direction.py  participation.py  person.py
updater/src/notion/models/dictionaries/: participation_role.py
updater/src/notion/models/primitives/: base.py  checkbox.py  date.py  email.py  files.py  multiselect.py  number.py  phone_number.py  relation.py  rich_text.py  select.py  title.py
updater/src/notion/writer/: construct_badge_data.py  construct_participation_data.py  notion_writer.py
updater/src/rabbit/: consumer.py  manager.py
(+127 files in other folders)
