[tool.poetry]
name = "agreemod-v2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

#common
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
aio-pika = "^9.4.1"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
traceback-with-variables = "^2.0.4"
notion-client = "^2.2.1"

# updater
venusian = "^3.1.0"
isort = "^5.13.2"
black = "^24.2.0"
flake8 = "^7.0.0"
alembic = "^1.13.1"

# bot
aiogram = "^3.4.1"

# API
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
faker = "^25.2.0"

[tool.poetry.dev-dependencies]
isort = "^5.13.2"
black = "^24.2.0"
flake8 = "^7.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
