[tool.poetry]
name = "app"
version = "0.1.0"
description = "Notion and Coda integration services for Insomnia"
authors = ["Alexey Serikov <serikov.alexey42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.27"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
venusian = "^3.1.0"
isort = "^5.13.2"
black = "^24.2.0"
flake8 = "^7.0.0"
pydantic-settings = "^2.2.0"
traceback-with-variables = "^2.0.4"
notion-client = "^2.2.1"
psycopg2-binary = "^2.9.9"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

line_length = 120
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
known_localfolder = ["tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
