[project]
name = "grist-updater"
version = "0.1.0"
description = "Package for updating local database from Grist"
authors = [
    {name = "Egor Alpatov",email = "egroker1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiofiles (==23.2.1)",
    "aiogram (==3.8.0)",
    "aiohttp (==3.9.5)",
    "aiosignal (==1.3.1)",
    "alembic (==1.13.2)",
    "annotated-types (==0.7.0)",
    "anyio (==4.4.0)",
    "asyncpg (==0.29.0)",
    "attrs (==23.2.0)",
    "black (==24.4.2)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2024.6.2)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.1)",
    "click (==8.1.7)",
    "cryptography (==44.0.0)",
    "daemonize (==2.5.0)",
    "deepdiff (==7.0.1)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.7)",
    "et-xmlfile (==1.1.0)",
    "faker (==25.9.2)",
    "fastapi (==0.109.2)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.16.1)",
    "flake8 (==7.1.0)",
    "frozenlist (==1.4.1)",
    "future (==1.0.0)",
    "greenlet (==3.0.3)",
    "grist-api (==0.1.1)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.5)",
    "httpx (==0.27.0)",
    "idna (==3.7)",
    "installer (==0.7.0)",
    "isort (==5.13.2)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jeepney (==0.8.0)",
    "keyring (==25.6.0)",
    "magic-filter (==1.0.12)",
    "mako (==1.3.5)",
    "markupsafe (==2.1.5)",
    "mccabe (==0.7.0)",
    "more-itertools (==10.5.0)",
    "msgpack (==1.1.0)",
    "multidict (==6.0.5)",
    "mypy-extensions (==1.0.0)",
    "numpy (==2.0.0)",
    "openpyxl (==3.1.5)",
    "ordered-set (==4.1.0)",
    "packaging (==24.1)",
    "pamqp (==3.3.0)",
    "pandas (==2.2.2)",
    "pathspec (==0.12.1)",
    "pkginfo (==1.12.0)",
    "platformdirs (==4.2.2)",
    "psycopg2-binary (==2.9.9)",
    "pycodestyle (==2.12.0)",
    "pycparser (==2.22)",
    "pydantic (==2.7.4)",
    "pydantic-settings (==2.3.4)",
    "pydantic-core (==2.18.4)",
    "pyflakes (==3.2.0)",
    "pyproject-hooks (==1.2.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.0.1)",
    "pytz (==2024.1)",
    "pyyaml (==6.0.1)",
    "rapidfuzz (==3.11.0)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "secretstorage (==3.3.3)",
    "shellingham (==1.5.4)",
    "six (==1.16.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.31)",
    "starlette (==0.36.3)",
    "tenacity (==8.4.2)",
    "tomlkit (==0.13.2)",
    "traceback-with-variables (==2.0.4)",
    "trove-classifiers (==2025.1.7.14)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2024.1)",
    "urllib3 (==2.3.0)",
    "uvicorn (==0.27.1)",
    "venusian (==3.1.0)",
    "virtualenv (==20.28.1)",
    "yarl (==1.9.4)",
    "aio-pika (>=9.5.5,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
