[tool.poetry]
name = "event-manager"
version = "0.1.0"
description = ""
authors = ["Wotori Movako <10486621+wotori@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "^9.3.0"
aiohttp = "^3.9.1"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
